k8s/ingress/openproject-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openproject-ingress
  namespace: openproject
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - neelimaadevops.online
    secretName: openproject-tls
  rules:
  - host: neelimaadevops.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openproject-svc
            port:
              number: 80
